Adding API endpoint simpop.
